--- a/pagamentos.html
+++ b/pagamentos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Pagamentos — MoskoGás v1.8.1</title>
+<title>Pagamentos — MoskoGás v1.8.2</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.8.1 — pagamentos</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.8.2 — pagamentos</div>
 <div class="toolbar">
   <div style="display:flex;align-items:center;gap:4px">
     <input type="date" id="fDateFrom" onchange="loadPagamentos()" style="width:135px">
@@ -85,7 +85,7 @@
   <input type="text" id="fQ" placeholder="🔍 Busca cliente..." oninput="loadPagamentos()" style="width:160px">
   <button class="btn btn-orange" onclick="loadPagamentos()" title="Recarregar">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
-  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.8.1</span>
+  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.8.2</span>
 </div>
 
 <div class="bulk-bar" id="bulk-bar">
@@ -143,7 +143,7 @@
 </div>
 
 <script>
-// v1.8.1 — Pagamentos: QR Code PIX PushInPay + Venda agrupada + Marcar Pago
+// v1.8.2 — Pagamentos: QR Code PIX PushInPay + Venda agrupada + Marcar Pago
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -205,9 +205,14 @@ function renderTable(rows) {
     let actionBtns='';
     // Lembrete PIX + QR Code
     if(p.tipo_pagamento==='pix_receber'){
-      // Botão QR Code PIX
+      // Botão QR Code PIX — Cora exige mínimo R$5,00
       const hasQr = p.pix_tx_id || p.cora_invoice_id;
-      actionBtns+=`<button class="btn-qr" onclick="showQrCode(${p.id})" title="${hasQr?'Ver QR Code PIX':'Gerar QR Code PIX'}">${hasQr?'📱 QR':'➕ PIX'}</button>`;
+      const valorNum = parseFloat(p.total_value||0);
+      if(valorNum < 5){
+        actionBtns+=`<button class="btn-qr" disabled title="Cora PIX exige mínimo R$5,00 (pedido: R$${valorNum.toFixed(2)})" style="opacity:.4;cursor:not-allowed">➕ PIX</button>`;
+      } else {
+        actionBtns+=`<button class="btn-qr" onclick="showQrCode(${p.id})" title="${hasQr?'Ver QR Code PIX':'Gerar QR Code PIX'}">${hasQr?'📱 QR':'➕ PIX'}</button>`;
+      }
       const cnt=p.reminder_count||0;const badge=cnt>0?`<span class="rb">${cnt}</span>`:'';
       const hasPhone=p.phone_digits&&p.phone_digits.replace(/\D/g,'').length>=10;
       actionBtns+=hasPhone?`<button class="btn-lembrete" onclick="enviarLembrete(${p.id})" title="Lembrete PIX WhatsApp${cnt?' ('+cnt+'x)':''}">📱${badge}</button>`:`<button class="btn-lembrete" disabled title="Sem telefone">📱</button>`;
