--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.10.8 — MoskoGás</title>
+<title>Config v2.10.9 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.10.8 — config</div>
-  <h1>⚙️ Configurações v2.10.8</h1>
+  <div class="version-badge">v2.10.9 — config</div>
+  <h1>⚙️ Configurações v2.10.9</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -230,7 +230,7 @@
     </label>
     <label style="font-size:13px;display:block;margin-top:12px">
       💬 Mensagem do lembrete
-      <span style="font-size:10px;color:#94a3b8;display:block;margin:4px 0">Variáveis: {nome}, {itens}, {valor}, {ontem}, {chave_pix} — Saudação varia automaticamente</span>
+      <span style="font-size:10px;color:#94a3b8;display:block;margin:4px 0">Variáveis: {nome}, {itens}, {valor}, {ontem}, {chave_pix}, {pix_copia_cola} — Saudação varia automaticamente</span>
       <textarea id="lemb-mensagem" rows="8" style="width:100%;font-size:13px;border:2px solid #e2e8f0;border-radius:8px;padding:10px;margin-top:4px;resize:vertical"></textarea>
     </label>
     <div style="display:flex;gap:8px;margin-top:12px">
