--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.11.0 — MoskoGás</title>
+<title>Config v2.11.1 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.11.0 — config</div>
-  <h1>⚙️ Configurações v2.11.0</h1>
+  <div class="version-badge">v2.11.1 — config</div>
+  <h1>⚙️ Configurações v2.11.1</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -946,7 +946,7 @@ async function salvarSafetyConfig() {
 
 const LEMBRETE_PADRAO = `Olá {nome}! 👋
 
-Dia {ontem} entregamos o seguinte pedido:
+Entregamos {ontem} o seguinte pedido:
 {itens}
 Valor: R$ {valor}
 
