--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.11.1 — MoskoGás</title>
+<title>Config v2.11.2 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.11.1 — config</div>
-  <h1>⚙️ Configurações v2.11.1</h1>
+  <div class="version-badge">v2.11.2 — config</div>
+  <h1>⚙️ Configurações v2.11.2</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -954,9 +954,7 @@ Ainda não identificamos o pagamento via PIX.
 
 Segue abaixo o código Copia e Cola para efetuar o PIX. 👇
 
-Caso já tenha sido pago, por gentileza nos envie o comprovante para darmos baixa.
-
-— MoskoGás 🔥`;
+Caso já tenha sido pago, por gentileza nos envie o comprovante para darmos baixa.`;
 
 function resetLembreteTemplate() {
   document.getElementById('lemb-mensagem').value = LEMBRETE_PADRAO;
